# convinci

./: .gitignore  Cargo.toml  LICENSE  README.md  create_releases.sh  install.ps1  install.sh
.github/workflows/: bump-version.yml  release.yml
scripts/: create_releases.sh  install.ps1  install.sh
src/: commit.rs  config.rs  hooks.rs  main.rs  tui.rs
