[package]
name = "convinci"
version = "0.1.4"
edition = "2024"
description = "A fast terminal helper for creating conventional commits"
license = "MIT"
repository = "https://github.com/alexandrefelipea/convinci"
keywords = ["git", "commit", "conventional-commits", "cli", "tui"]
categories = ["command-line-utilities"]
readme = "README.md"

[profile.dev]
lto = false

[profile.release]
lto = true
codegen-units = 1

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
anyhow = "1.0"
clap = { version = "4.5.40", features = ["derive"] }
regex = "1.11.1"
